# chief

./: .dockerignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
ChatAssistant/: README.md  main.py
ChatAssistant/audio/: __init__.py  mic_capture.py  stt.py  tts.py  wake_word_listener.py
ChatAssistant/brain/: prompt_presets.py  responder.py
ChatAssistant/core/: state_manager.py  telemetry_reader.py
chief/: README.md  main.py
chief/audio/: hotkey_listener.py  mic_capture.py  tts.py  types.py
chief/brain/: intent_classifier.py  llm_client.py
chief/core/: reference_data.py  state_manager.py  telemetry_reader.py
chief/data/reference/: f-16c_block_50.json
chief/ui/: settings_window.py  tray_app.py
tests/: test_audio_layers.py  test_intent_classifier.py  test_main.py  test_prompt_presets.py  test_reference_data.py  test_responder.py  test_state_manager.py  test_telemetry_reader.py
tests/audio/: test_elevenlabs.py  test_microphone_stream.py
