[build-system]
requires = ["hatchling>=1.18"]
build-backend = "hatchling.build"

[project]
name = "chief"
version = "0.1.0"
description = "War Thunder local voice assistant scaffold"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
]

[project.optional-dependencies]
audio = [
    "sounddevice>=0.4",
    "pydub>=0.25",
]
dev = [
    "pytest>=7.4",
]

[tool.hatch.build.targets.wheel]
packages = ["ChatAssistant"]

[tool.hatch.build.targets.sdist]
include = [
    "ChatAssistant",
    "tests",
    "README.md",
]
